--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <div class="parent-container_1">
                     <img src="curve.png" alt="rektangel" class="rektangel_1">
-                    <img src="Watercolor_effect.png" alt="Vandfarve effekt" class="Vandfarve_effekt_1">
+                    <img src="Watercolor_effect.png" alt="Vandfarve effekt" class="vandfarve_effekt_1">
                     <img src="maiken 1.png" alt="Maiken" class="profil-photo_1">
 
                 <div class="container_profil_1"> 
@@ -99,7 +99,7 @@
     <div class="container_2">
         <div class="parent-container_2">
               <img src="curve.png" alt="rektangel" class="rektangel_2">
-              <img src="Watercolor_effect.png" alt="Vandfarve effekt" class="Vandfarve_effekt_2">
+              <img src="Watercolor_effect.png" alt="Vandfarve effekt" class="vandfarve_effekt_2">
               <img src="christinacirkel 1.png" alt="Christina" class="profil-photo_2">
 
         <div class="container_profil_2"> 
@@ -127,7 +127,7 @@
   <div class="video_1">
     <video controls class="video_1_str">
       <source src="præsentation.mp4" type="video/mp4">
-       <track src="undertekster.vtt" kind="subtitles" srclang="da" label="Dansk">
+       
     </video>
   </div>
 </figure>
